# sharehash

./: CMakeLists.txt  README.md  main.cpp
benchmark/: benchmark.cpp
benchmark/competitors/: MapInterface.h
benchmark/competitors/Cuckoo/: CuckooMapInterface.h
benchmark/competitors/MapEmbed/: MapEmbedInterface.h
benchmark/competitors/MapEmbed/src/: MapEmbed.h  murmur.h
benchmark/competitors/ShareHash/: ShareHashInterface.h
benchmark/competitors/SparseHash/: SparseHash.h
benchmark/competitors/UnorderedMap/: UnorderedMapInterface.h
include/: ShareHash.h  concurrency.h  murmur3.h  sharehash.h
